--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ img {
 }
 
 .boxman .boxmann {
-  background-color: #51acb8;
+  background-color: #5B67CA;
   color: #fff;
   padding: 2rem;
   border-radius: 2rem;
@@ -196,6 +196,7 @@ img {
 ul.listnum {
   list-style: auto;
   padding-left: 2rem;
+  color: #fff;
 }
 
 ul.listnum li {
@@ -220,12 +221,12 @@ ul.listnum li {
 }
 
 .card h2 {
-  color: #51acb8;
+  color: black;
   font-weight: 600;
 }
 
 .card1 {
-  background-color: #e9f1c8;
+  background-color: #5B67CA;
 }
 
 .card2, .card4, .card5 {
@@ -264,7 +265,7 @@ ul.listnum li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: #51acb8;
+  background: #5B67CA;
   color: #fff;
 }
 
