--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,7 +2,38 @@
 @media all and (max-width:1200px){
 	
 	/* Home Screen Styles */
-
+	.process .card {
+		height: 100%;
+		margin-left:0px !important;
+		width: 426px;
+		border-radius: 20px;
+	}
+	.vizzy1 {
+		width: 51px !important;
+		height: 54px !important;
+		margin-top: -475px !important;
+		margin-left: 52px !important;
+	}
+	.vizzy2 {
+		width: 51px !important;
+		height: 54px !important;
+		margin-top: -339px !important;
+		margin-left: -57px !important;
+	}
+	.vizzy3 {
+		width: 51px !important;
+		height: 54px !important;
+		margin-top: -191px !important;
+		margin-left: 226px !important;
+	}
+    .footer-image {
+		width: 518px;
+		height: 415px;
+		margin-top: -73px;
+	}
+	.footerbtn{
+		margin-left: -149px !important;
+	}
 	body h1 {
 		font-size: 42px;
 		line-height: 56px;
@@ -59,7 +90,7 @@
 		width: 167px;
 	}
 	.hiw-icons-img{
-		width: 130px;
+		width: 113px;
 	}
 	.consult .col-lg-3 {
 		margin-bottom: 20px;
@@ -75,7 +106,40 @@
     width: 221px !important;
     margin: 0 auto;
 	}
+	.col-lg-3 {
+		flex: 0 0 auto;
+		width: 25%;
+	}
+	.vizzy1{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -355px !important;
+		margin-left: 38px !important;
+	 }
+	 .vizzy3{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -149px !important;
+		margin-left: 165px !important;
+	 }
+	 .vizzy2{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -257px !important;
+		margin-left: -43px !important;
+	 }
+	 .footer-image {
+		width: 457px;
+		height: 396px;
+		margin-top: -63px;
+	}
+	.process .card {
+		height: 351px!important;
+		width: 334px !important;
+		border-radius: 20px;
+	}
 	/* Home Screen Styles */
+
 	
 }
 
@@ -152,7 +216,7 @@
 		border-bottom: 3px solid #5B67CA;
 	}
 	.call-to-action .wrapper {
-		padding: 30px 15px 30px;
+		padding: 0px 0px 0px;
 	}
 	.footer {
 		font-size: 12px;
@@ -191,9 +255,35 @@
 		/* margin-left: 17px; */
 	}
 	.footer-image{
-		width: 100%;
+		width: 346px !important;
     height: 310px;
 	}
+	.footerbtn{
+		padding-right: 20px!important;
+    padding-left: 20px !important;
+    padding-top: 5px!important;
+    padding-bottom: 5px!important;
+    margin-left:120px !important;
+		text-align: center !important;
+	}
+	.vizzy1{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -355px !important;
+		margin-left: 38px !important;
+	 }
+	 .vizzy3{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -149px !important;
+		margin-left: 165px !important;
+	 }
+	 .vizzy2{
+		width: 37px !important;
+		height: 36px !important;
+		margin-top: -257px !important;
+		margin-left: -43px !important;
+	 }
 }
 
 
@@ -205,7 +295,7 @@
 		width: 100%;
 	}
 	.checkout-app {
-		background: none;
+		background: #F9F9FC;;
 	}
 
 	.hiw-icons{
@@ -215,8 +305,10 @@
 		width: 130px;
 	}
 	.logo{
-		width: 50% !important;
-		height: 50px !important;
+		/* width: 50% !important;
+		height: 50px !important; */
+		width: 56% !important;
+    	height: 50px !important;
 		margin-top: -3px !important;
     
 	}
@@ -234,11 +326,84 @@
 	display:none;
 	}
 	.consult img {
-		height: 359px !important;
+		height: 350px !important;
 		width: 221px !important;
 		margin: 0 auto
 	}
-	.visa-process img{
-
+	
+	.call-to-action .wrapper{
+		text-align: center!important;
+		margin-left:-80px !important;
 	}
-} 
+	.vizzy1 {
+		width: 40px !important;
+		height: 40px !important;
+		margin-top: -380px !important;
+    margin-left: 42px !important;
+	}
+	.vizzy2 {
+		width: 40px !important;
+		height: 40px !important;
+		margin-top: -280px !important;
+    margin-left: -51px !important;
+	}
+ .vizzy3 {
+	width: 40px !important;
+	height: 40px !important;
+	margin-top: -159px !important;
+    margin-left: 184px !important;
+	}
+
+	.process .card {
+    height: 88% !important;
+    margin-left: -3px !important;
+    width: 360px !important;
+    border-radius: 20px !important;
+}
+
+}
+/* for mobile */
+@media all and (max-width:320px){
+	.vizzy1 {
+		width: 40px !important;
+		height: 40px !important;
+		margin-top: -305px !important;
+		margin-left: 30px !important;
+	}
+	.vizzy2 {
+		width: 40px !important;
+		height: 40px !important;
+	    margin-top: -219px !important;
+    margin-left: -47px !important;
+	}
+ .vizzy3 {
+	width: 40px !important;
+	height: 40px !important;
+    margin-top: -179px !important;
+    margin-left: 200px !important;
+	}
+
+
+}
+@media all and (max-width:480px){
+/* .vizzy1 {
+    width: 40px !important;
+    height: 40px !important;
+    margin-top: -408px !important;
+    margin-left: 46px !important;
+}
+.vizzy2 {
+    width: 40px !important;
+    height: 40px !important;
+    margin-top: -292px !important;
+    margin-left: -46px !important;
+}
+.vizzy3 {
+    width: 40px !important;
+    height: 40px !important;
+    margin-top: -169px !important;
+    margin-left: 195px !important;
+} */
+
+
+}
