--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,22 @@
 /* Base Styles */
 
-@font-face {
-    font-family: 'Montserrat';
+/* @font-face {
+ 
     src: url('../fonts/roboto-regular-webfont.woff2') format('woff2'),
          url('../fonts/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
-}
+} */
+font-family: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+
+font-family: 'Open Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
 
 @font-face {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'poppins-regular';
     src: url('../fonts/poppins-regular-webfont.woff2') format('woff2'),
          url('../fonts/poppins-regular-webfont.woff') format('woff');
     font-weight: normal;
@@ -24,12 +30,15 @@ html {
 .container {
     max-width: 1440px;
 }
+p{
+    font-family: 'Open Sans', sans-serif !important; 
+}
 body{
-	font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 	float: left;
     width: 100%;
 	height: 100%;
-    background-color:#F9F9FC;
+    
 }
 .no-border{
 	border:0 none !important;
@@ -49,8 +58,10 @@ a{
 	text-decoration: none !important;
 }
 .logo{
-    width: 30%;
-    height: 80px;
+    /* width: 60%;
+    height: 80px; */
+    width: 46%;
+    height: 95px;
     margin-top: -18px;
     margin-bottom: -33px;
    
@@ -85,15 +96,12 @@ button.navbar-toggler {
 .collapse:not(.show) {
     display: block !important
 }
-p{
-    font-family: 'Open Sans', sans-serif!important;
-   
-}
+
 .card h2{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important; 
     font-style: normal;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 30px;
     text-align: center;
     color: #000000;
@@ -133,10 +141,10 @@ ul.card {
 }
 
 .primary-nav li a {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
+    font-weight: 600;
+    font-size: 16px;
     line-height: 16px;
     color: #000000;
 	text-transform: uppercase;
@@ -159,17 +167,18 @@ ul.card {
     font-size: 15px;
     line-height: 30px;
 	text-align: left;
-     font-family:'Open Sans',sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
 }
 
 .callout-message .btn-primary,
 .call-to-action .btn-primary,
 .app-buttons .btn-primary {
-	font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     background: #0066FF;
     border-radius: 21px;
     font-style: normal;
-    font-size: 16px;
+    font-weight: 600;
+    font-size: 15px;
     line-height: 19px;
 	padding: 10px 39px;
 }
@@ -178,17 +187,22 @@ ul.card {
     padding: 26px 0 89px;
 }
 .info h1{
-    font-size: 45px;
-    line-height: 55px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 60px;
+    line-height: 75px;
+    color: #000000;
+    margin: 0;
+    padding-bottom: 30px;
+
     text-align: center;
-    padding: 0 0 55px;
 }
 .info ul{
     line-height: 30px;
 }
 .info ul li {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15px;
+  
+    font-size: 13px !important;
 }
 
 .card-small-text {
@@ -199,19 +213,22 @@ ul.card {
     text-align: center;
 }
 .how-it-works .col-2 > .card {
-    height: 100%;
-    font-family:'Open Sans', sans-serif;
+    height: 259px;
+    font-family:'Open Sans', sans-serif !important;
+    border-radius: 18px !important;
 }
 .how-it-works .col-2 > .card p{
-    font-size:14px;
-    font-family:'Open Sans', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    font-family:'Open Sans', sans-serif !important;
+    border-radius: 25px !important;
 }
 .card h3 {
     padding: 27px 0 4px;
     margin: 0;
-    font-family:'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     font-style: normal;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 26px;
     text-align: center;
     color: #23262F;
@@ -231,7 +248,7 @@ ul.card {
 }
 .before-heading {
     font-size: 24px;
-    font-family:'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     display: block;
     line-height: 100%;
     color: #5B67CA;
@@ -241,7 +258,9 @@ ul.card {
 }
 .how-it-works .container > p {
     padding-bottom: 77px;
-    font-family: 'Open Sans', sans-serif;
+    font-size:16px;
+    font-weight:600;
+    font-family: 'Open Sans', sans-serif !important;
     margin: 0;
 }
 .info ul li {
@@ -250,11 +269,11 @@ ul.card {
 .info .card p {
     font-size: 14px;
     line-height: 18px;
-    font-family:'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
 }
 .info .col-lg-6 .card p {
     font-size: 13px;
-    font-family:'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
 }
 .how-it-works.process .col-4 > .card{
     height:100%;
@@ -263,7 +282,7 @@ ul.card {
     font-size:14px;
 }
 .checkout-app {
-    background: url(../images/about-bg.jpg) no-repeat scroll left center / 100%;
+    background: url(../images/persons.png) no-repeat scroll left center / 100%;
     text-align: center;
     height: 688px;
     display: flex;
@@ -279,21 +298,26 @@ ul.card {
     line-height: 30px;
     font-size: 14px;
     padding-bottom: 30px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
 }
 .process h3 {
     text-align: left;
+    font-size: 16px;
 }
 .process .card p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 16px;
     line-height: 30px;
 }
-.process img {
-   
+.process-img {
+    width: 40%;
+    height: 151px;
 }
 .process .card {
-    height: 100%;
+    height: 100% !important;
+    margin-left: 126px !important;
+    width: 426px !important;
+    border-radius: 20px;
 }
 .consult h1 {
     padding-bottom: 25px;
@@ -307,6 +331,7 @@ ul.card {
 .visa-process h3 {
     margin-bottom: 25px;
     font-size: 18px;
+    font-weight: 600;
 }
 .visa-process img {
     margin-bottom: 25px;
@@ -323,8 +348,9 @@ ul.card {
     
 }
 .visa-process .col-lg-4 ul li {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 16px;
+    font-weight:500;
     padding-bottom: 12px;
     list-style: square;
 }
@@ -339,8 +365,8 @@ ul.card {
 }
 .call-to-action .wrapper{
    
-    padding-top:65px;
-    padding-right: 0%;
+    padding-top:65px !important;
+    padding-right: 0% !important;
     clear: both;
     text-align: center;
     
@@ -385,7 +411,7 @@ ul.card {
     margin-left: 109px;
 }
 .footer strong {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -397,7 +423,7 @@ ul.card {
 .footer address {
     margin: 0;
     padding-bottom: 60px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
     line-height: 36px;
 }
 .footer address a{
@@ -426,21 +452,20 @@ ul.card {
 
 .accordion{
     width: 100%;
-    
-    color: #F9F9FC;
-   
+  
     
 }
 .accordion-tab {
     margin-bottom: 45px;
-    background-color:#F9F9FC;
+    background-color: #F9F9FC;
+    
 
 }
 
 .accordion-tab > .accordion-toggle{
     position: absolute;
     display: none;
-    
+     
 }
 
 .accordion-tab > label{
@@ -451,11 +476,11 @@ ul.card {
     position: relative;
     display: block;
     padding: 13px 40px 13px 20px;
-    border-top: 1px solid #ddd;
+    border: 1px solid #ddd;
     cursor: pointer;
     width: 100%;
     height: 100px;
-    padding-bottom: 45px;
+    padding-bottom: 45px ;
     border-radius: 10px;
 
 }
@@ -466,6 +491,8 @@ ul.card {
     overflow: hidden;
     color: #000000;
     text-align: justify; 
+    font-family: 'Open Sans', sans-serif !important;
+   
 
 }
 
@@ -474,30 +501,35 @@ ul.card {
     position: absolute;
     top: 13px;
     right: 20px;
-    font-family: fontawesome;
+    font-family: 'Open Sans', sans-serif !important;
     transform: rotate(90deg);
     transition:transform .30s ;
+  
+    
+  
 }
 
 .accordion-tab > .accordion-toggle:checked ~ label:after{
     transform: rotate(0deg);
-
+  
 }
 
 .accordion-tab > .accordion-toggle:checked ~ .accordion-content{
-    max-height: 100vh;
+    max-height: 131vh;
 }
 
 .accordion-tab > .accordion-content p {
     margin: 15px 0;
-    padding: 0 20px;
+    padding: 0 20px !important;
     font-size: 15px;
     line-height: 1.5;
+    font-family: 'Open Sans', sans-serif !important;
    
 }
 
 .d-img1 {
     position: relative;
+
     /* background-image: url(../images/zhao\ li\ ying.jpg); */
    width: 347px;
    height: 241px;
@@ -530,9 +562,12 @@ ul.card {
      color: #fff;
      font-style: normal;
     font-weight: 700;
+    font-size: 16px;
     text-align: left;
     
  }
+
+
  
   /* Style the images inside the grid */
 .column-img {
@@ -556,13 +591,70 @@ ul.card {
  }
  .user-guid .p{
     font-family: 'Open Sans', sans-serif;
+    font-size:16px;
+    font-weight:600;
  }
 .footer-image{
-    width: 631px;
+    width: 582px;
     height: 490px;
-    margin-top: -41px;
+    margin-top: -73px;
 }
- 
+ .footerbtn{
+   
+    text-align:left !important;
+    margin-right: 0;
+    margin-left: -269px;
+ }
+ .dev-img{
+    width:347px !important; 
+    height:267px !important; 
+    border-radius: 18px !important;
+ }
+ .row{
+    width: 100% !important;
+ }
+ .vizzy1 {
+    width: 67px !important;
+    height: 67px !important;
+    margin-top: -656px !important;
+    margin-left: 76px !important;
+}
+.vizzy2 {
+    width: 67px !important;
+    height: 67px !important;
+    margin-top: -466px !important;
+    margin-left: -73px !important;
+}
+.vizzy3 {
+    width: 67px !important;
+    height: 67px !important;
+    margin-top: -260px !important;
+    margin-left: 323px !important;
+}
+.checkout-app .vizzy1{
+    width: 100px;
+
+
+
+}
+.checkout-app .vizzy2{
+    width: 100px;
+
+
+
+}
+.checkout-app .vizzy3{
+    width: 100px;
+
+
+
+}
+.checkout-app .vizzy4{
+    width: 100px;
+
+
+
+}
   /* .image {
     opacity: 1;
     display: block;.accordion-tab > label {
